Relative image img1 path updated and fixed. => img1 is now visible and clear.

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     <div class="col-md">
       <div class="card">
         <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-          <img src="/img/img1.jpg" class="img-fluid"/>
+          <img src="/honardoustan/img/img1.jpg" class="img-fluid"/>
           <a href="#!">
             <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
           </a>
@@ -190,7 +190,7 @@
     <div class="col-md">
       <div class="card">
         <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-          <img src="/img/ecoPrint-modelA.jpg" class="img-fluid"/>
+          <img src="/honardoustan/img/img1.jpg" class="img-fluid"/>
           <a href="#!">
             <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
           </a>
