The title of each card amended.

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     <div class="col-md">
       <div class="card">
         <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-          <img src="/honardoustan/img/img1.jpg" class="img-fluid"/>
+          <img src="/honardoustan/img/img1.jpg" class="img-fluid" alt="img1 = ecoPrint image"/>
           <a href="#!">
             <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
           </a>
@@ -175,13 +175,13 @@
     <div class="col-md">
       <div class="card">
         <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-          <img src="img/img2.jpg" class="img-fluid"/>
+          <img src="img/img2.jpg" class="img-fluid" alt="img2= Pateh" />
           <a href="#!">
             <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
           </a>
         </div>
         <div class="card-body">
-          <h5 class="card-title">پته طرح جدید</h5>
+          <h5 class="card-title">پته</h5>
           <p class="card-text">مدل اسلیمی</p>
           <a href="#!" class="btn btn-primary">خرید</a>
         </div>
@@ -190,7 +190,7 @@
     <div class="col-md">
       <div class="card">
         <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-          <img src="/honardoustan/img/img1.jpg" class="img-fluid"/>
+          <img src="/honardoustan/img/img1.jpg" class="img-fluid"/ alt="img1 = ecoPrint">
           <a href="#!">
             <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
           </a>
@@ -205,14 +205,29 @@
     <div class="col-md">
       <div class="card">
         <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-          <img src="img/img2.jpg" class="img-fluid"/>
+          <img src="img/img2.jpg" class="img-fluid" alt="img2= Pateh"/>
           <a href="#!">
             <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
           </a>
         </div>
         <div class="card-body">
-          <h5 class="card-title">اکوپرینت</h5>
-          <p class="card-text">طرح برگ چنار</p>
+          <h5 class="card-title">پته </h5>
+          <p class="card-text">اسلیمی</p>
+          <a href="#!" class="btn btn-primary">خرید</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-md">
+      <div class="card">
+        <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
+          <img src="img/img2.jpg" class="img-fluid"/ alt="img2 = Pateh">
+          <a href="#!">
+            <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
+          </a>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">پته</h5>
+          <p class="card-text">اسلیمی</p>
           <a href="#!" class="btn btn-primary">خرید</a>
         </div>
       </div>
@@ -226,8 +241,8 @@
           </a>
         </div>
         <div class="card-body">
-          <h5 class="card-title">اکوپرینت</h5>
-          <p class="card-text">طرح برگ چنار</p>
+          <h5 class="card-title">پته</h5>
+          <p class="card-text">اسلیمی</p>
           <a href="#!" class="btn btn-primary">خرید</a>
         </div>
       </div>
@@ -235,29 +250,14 @@
     <div class="col-md">
       <div class="card">
         <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-          <img src="img/img2.jpg" class="img-fluid"/>
+          <img src="img/img2.jpg" class="img-fluid" alt="img2= Pateh"/>
           <a href="#!">
             <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
           </a>
         </div>
         <div class="card-body">
-          <h5 class="card-title">اکوپرینت</h5>
-          <p class="card-text">طرح برگ چنار</p>
-          <a href="#!" class="btn btn-primary">خرید</a>
-        </div>
-      </div>
-    </div>
-    <div class="col-md">
-      <div class="card">
-        <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-          <img src="img/img2.jpg" class="img-fluid"/>
-          <a href="#!">
-            <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
-          </a>
-        </div>
-        <div class="card-body">
-          <h5 class="card-title">اکوپرینت</h5>
-          <p class="card-text">طرح برگ چنار</p>
+          <h5 class="card-title">پته</h5>
+          <p class="card-text">اسلیمی</p>
           <a href="#!" class="btn btn-primary">خرید</a>
         </div>
       </div>
