One row added. now there are two rows.

--- a/index.html
+++ b/index.html
@@ -156,7 +156,9 @@
 <!-- Jumbotron -->
 <!-- grid -->
 <div class="container">
+  <!-- row-1 -->
   <div class="row">
+    <!-- col-1 -->
     <div class="col-md">
       <div class="card">
         <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
@@ -172,6 +174,25 @@
         </div>
       </div>
     </div>
+    <!-- col-1 ends -->
+    <!-- col-2 -->
+    <div class="col-md">
+      <div class="card">
+        <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
+          <img src="/honardoustan/img/img1.jpg" class="img-fluid" alt="img1 = ecoPrint image" />
+          <a href="#!">
+            <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
+          </a>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">اکوپرینت</h5>
+          <p class="card-text">طرح برگ چنار</p>
+          <a href="#!" class="btn btn-primary">خرید</a>
+        </div>
+      </div>
+    </div>
+    <!-- col-2 ends -->
+    <!-- col-3 -->
     <div class="col-md">
       <div class="card">
         <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
@@ -187,6 +208,8 @@
         </div>
       </div>
     </div>
+    <!-- col-3 ends -->
+    <!-- col-4 -->
     <div class="col-md">
       <div class="card">
         <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
@@ -202,67 +225,84 @@
         </div>
       </div>
     </div>
-    <div class="col-md">
-      <div class="card">
-        <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-          <img src="img/img2.jpg" class="img-fluid" alt="img2= Pateh"/>
-          <a href="#!">
-            <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
-          </a>
-        </div>
-        <div class="card-body">
-          <h5 class="card-title">پته </h5>
-          <p class="card-text">اسلیمی</p>
-          <a href="#!" class="btn btn-primary">خرید</a>
-        </div>
-      </div>
-    </div>
-    <div class="col-md">
-      <div class="card">
-        <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-          <img src="img/img2.jpg" class="img-fluid"/ alt="img2 = Pateh">
-          <a href="#!">
-            <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
-          </a>
-        </div>
-        <div class="card-body">
-          <h5 class="card-title">پته</h5>
-          <p class="card-text">اسلیمی</p>
-          <a href="#!" class="btn btn-primary">خرید</a>
-        </div>
-      </div>
-    </div>
-    <div class="col-md">
-      <div class="card">
-        <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-          <img src="img/img2.jpg" class="img-fluid"/>
-          <a href="#!">
-            <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
-          </a>
-        </div>
-        <div class="card-body">
-          <h5 class="card-title">پته</h5>
-          <p class="card-text">اسلیمی</p>
-          <a href="#!" class="btn btn-primary">خرید</a>
-        </div>
-      </div>
-    </div>
-    <div class="col-md">
-      <div class="card">
-        <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-          <img src="img/img2.jpg" class="img-fluid" alt="img2= Pateh"/>
-          <a href="#!">
-            <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
-          </a>
-        </div>
-        <div class="card-body">
-          <h5 class="card-title">پته</h5>
-          <p class="card-text">اسلیمی</p>
-          <a href="#!" class="btn btn-primary">خرید</a>
-        </div>
-      </div>
-    </div>
+    <!-- col-4 ends -->
   </div>
+  <!-- row-1 ends -->
+  <!-- row-2 -->
+  <div class="row">
+    <!-- col-1 -->
+    <div class="col-md">
+      <div class="card">
+        <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
+          <img src="/honardoustan/img/img1.jpg" class="img-fluid" alt="img1 = ecoPrint image" />
+          <a href="#!">
+            <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
+          </a>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">اکوپرینت</h5>
+          <p class="card-text">طرح برگ چنار</p>
+          <a href="#!" class="btn btn-primary">خرید</a>
+        </div>
+      </div>
+    </div>
+    <!-- col-1 ends -->
+    <!-- col-2 -->
+    <div class="col-md">
+      <div class="card">
+        <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
+          <img src="/honardoustan/img/img1.jpg" class="img-fluid" alt="img1 = ecoPrint image" />
+          <a href="#!">
+            <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
+          </a>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">اکوپرینت</h5>
+          <p class="card-text">طرح برگ چنار</p>
+          <a href="#!" class="btn btn-primary">خرید</a>
+        </div>
+      </div>
+    </div>
+    <!-- col-2 ends -->
+    <!-- col-3 -->
+    <div class="col-md">
+      <div class="card">
+        <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
+          <img src="img/img2.jpg" class="img-fluid" alt="img2= Pateh" />
+          <a href="#!">
+            <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
+          </a>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">پته</h5>
+          <p class="card-text">مدل اسلیمی</p>
+          <a href="#!" class="btn btn-primary">خرید</a>
+        </div>
+      </div>
+    </div>
+    <!-- col-3 ends -->
+    <!-- col-4 -->
+    <div class="col-md">
+      <div class="card">
+        <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
+          <img src="/honardoustan/img/img1.jpg" class="img-fluid" / alt="img1 = ecoPrint">
+          <a href="#!">
+            <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
+          </a>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">اکوپرینت نوع دوم</h5>
+          <p class="card-text">طرح نو</p>
+          <a href="#!" class="btn btn-primary">خرید</a>
+        </div>
+      </div>
+    </div>
+    <!-- col-4 ends -->
+  </div>
+  <!-- row-2 ends -->
+    
+</div>
+  
 </div>
 <!-- end grid -->
 <!-- Footer -->
