about-me issue in the nav-bar resolved. + home nav-link is centered.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <li class="nav-item ">
           <a class="nav-link text-light" href="#"> دوره های آموزشی</a>
         </li>
-        <li class="nav-item ">
+        <li class="nav-item " id="about-me">
           <a class="nav-link text-light" href="#">درباره من</a>
         </li>
         <li class="nav-item " id="contactUs">
