Relative path changed.

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     <div class="col-md">
       <div class="card">
         <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-          <img src="/honardoustan/img/img1.jpg" class="img-fluid" alt="img1 = ecoPrint image" />
+          <img src="/img/img1.jpg" class="img-fluid" alt="img1 = ecoPrint image" />
           <a href="#!">
             <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
           </a>
@@ -196,7 +196,7 @@
     <div class="col-md">
       <div class="card">
         <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-          <img src="img/img2.jpg" class="img-fluid" alt="img2= Pateh" />
+          <img src="/img/img2.jpg" class="img-fluid" alt="img2= Pateh" />
           <a href="#!">
             <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
           </a>
@@ -213,7 +213,7 @@
     <div class="col-md">
       <div class="card">
         <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-          <img src="/honardoustan/img/img1.jpg" class="img-fluid"/ alt="img1 = ecoPrint">
+          <img src="/img/img1.jpg" class="img-fluid"/ alt="img1 = ecoPrint">
           <a href="#!">
             <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
           </a>
@@ -234,7 +234,7 @@
     <div class="col-md">
       <div class="card">
         <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-          <img src="/honardoustan/img/img1.jpg" class="img-fluid" alt="img1 = ecoPrint image" />
+          <img src="/img/img1.jpg" class="img-fluid" alt="img1 = ecoPrint image" />
           <a href="#!">
             <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
           </a>
@@ -251,7 +251,7 @@
     <div class="col-md">
       <div class="card">
         <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-          <img src="/honardoustan/img/img1.jpg" class="img-fluid" alt="img1 = ecoPrint image" />
+          <img src="/img/img1.jpg" class="img-fluid" alt="img1 = ecoPrint image" />
           <a href="#!">
             <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
           </a>
@@ -285,7 +285,7 @@
     <div class="col-md">
       <div class="card">
         <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-          <img src="/honardoustan/img/img1.jpg" class="img-fluid" / alt="img1 = ecoPrint">
+          <img src="/img/img1.jpg" class="img-fluid" / alt="img1 = ecoPrint">
           <a href="#!">
             <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
           </a>
